--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#252525</color>
+    <color name="colorPrimaryDark">#252525</color>
+    <color name="colorAccent">@color/gray</color>
+    <color name="black">#1d1d1d</color>
+    <color name="gray">#898989</color>
+    <color name="gray_light">#cfcfcf</color>
+    <color name="white">#ffffff</color>
+    <color name="bg">#f3f3f3</color>
+    gray
 </resources>
