--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="36dp"
+    android:layout_marginRight="36dp"
+
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="36dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingBottom="32dp">
 
-        <EditText
-            android:id="@+id/input_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/auth_hint_email"
-            android:imeOptions="actionNext"
-            android:inputType="textEmailAddress"
-            android:maxWidth="256dp"
-            android:layout_marginTop="8dp"
-            android:nextFocusForward="@+id/input_password"
-            android:singleLine="true"
-            android:textColor="@color/black" />
+    <EditText
+        android:id="@+id/input_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:minWidth="256dp"
+
+        android:hint="@string/auth_hint_user_name"
+        android:imeOptions="actionNext"
+        android:inputType="textEmailAddress"
+        android:maxWidth="256dp"
+        android:nextFocusForward="@+id/input_password"
+        android:singleLine="true"
+        android:textColor="@color/black" />
 
 
-        <EditText
-            android:id="@+id/input_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:gravity="center_vertical"
-            android:hint="@string/auth_hint_password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:maxWidth="256dp"
-            android:textColor="@color/black" />
-    </LinearLayout>
+    <EditText
+        android:id="@+id/input_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        android:hint="@string/auth_hint_password"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:maxWidth="256dp"
+        android:minWidth="256dp"
+
+        android:textColor="@color/black" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="@string/auth_action_text"
+        android:textColor="@color/red"
+        android:textSize="18sp" />
 </LinearLayout>
