--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#252525</color>
-    <color name="colorPrimaryDark">#252525</color>
+    <color name="colorPrimary">@color/black_primary</color>
+    <color name="colorPrimaryDark">@color/black_primary</color>
     <color name="colorAccent">@color/gray</color>
     <color name="black">#1d1d1d</color>
+    <color name="black_primary">#252525</color>
     <color name="gray">#898989</color>
     <color name="gray_light">#cfcfcf</color>
     <color name="white">#ffffff</color>
     <color name="bg">#f3f3f3</color>
-    gray
+    <color name="red">#ff0000</color>
 </resources>
