--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -2,10 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="36dp"
-    android:layout_marginRight="36dp"
-
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="36dp"
+    android:paddingRight="36dp">
 
 
     <EditText
@@ -13,12 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:minWidth="256dp"
-
         android:hint="@string/auth_hint_user_name"
         android:imeOptions="actionNext"
         android:inputType="textEmailAddress"
         android:maxWidth="256dp"
+        android:minWidth="256dp"
         android:nextFocusForward="@+id/input_password"
         android:singleLine="true"
         android:textColor="@color/black" />
@@ -35,10 +33,10 @@
         android:inputType="textPassword"
         android:maxWidth="256dp"
         android:minWidth="256dp"
-
         android:textColor="@color/black" />
 
     <TextView
+        android:id="@+id/text_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
