--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/bg</item>
         <item name="android:windowActionBar">false</item>
-        <item name="colorControlNormal">@color/gray</item>
+        <item name="colorControlNormal">@color/black</item>
         <item name="colorControlActivated">@color/gray</item>
         <item name="colorControlHighlight">@color/gray</item>
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
     <style name="AppEditText" parent="@android:style/Widget.EditText">
