--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -8,7 +8,7 @@
 
 
     <EditText
-        android:id="@+id/input_email"
+        android:id="@+id/input_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
