--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="colorControlActivated">@color/gray</item>
         <item name="colorControlHighlight">@color/gray</item>
         <item name="android:textColorPrimary">@color/white</item>
+        <item name="actionMenuTextColor">@color/white</item>
     </style>
 
     <style name="AppEditText" parent="@android:style/Widget.EditText">
