--- a/app/src/main/res/layout/maps_fragment.xml
+++ b/app/src/main/res/layout/maps_fragment.xml
@@ -3,8 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/text_show_settings"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="maps"
-        android:gravity="center"/>
+        android:text="SHOW SETTINGS"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textColor="@color/red"/>
 </LinearLayout>
